FEAT - frontend implementation, physics in findpath etc. about to get rid of a bunch of old code from cw1 and cw2 because of refactor of findpath to return a record